test/tests/errors/error-class-cannot-assign-class.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        proc x() {}
        proc y() {}
    }

    T = T;
}